# retail-warehouse-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/: cli.py  main.py
src/agents/: analysis_agent.py  research_agent.py  scraping_agent.py
src/database/: connection.py
src/models/: company.py  database.py
src/tools/: firecrawl_client.py  web_search.py
tests/: test_agents.py  test_models.py  test_tools.py
